--- a/auth-service/auth-dev.properties
+++ b/auth-service/auth-dev.properties
@@ -1,9 +1,9 @@
-spring.application.name=auth-service
-server.port=8085
+#spring.application.name=auth-service
+#server.port=8085
 
-eureka.client.region = default
-eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+#eureka.client.region = default
+#eureka.client.registryFetchIntervalSeconds = 5
+#eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
 
 # Hibernate
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
