code update for user service

--- a/user-service/user.properties
+++ b/user-service/user.properties
@@ -1,15 +1,15 @@
-spring.application.name=user-service
-server.port=8083
+#spring.application.name=user-service
+#server.port=8083
 
-eureka.client.region = default
-eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+#eureka.client.region = default
+#eureka.client.registryFetchIntervalSeconds = 5
+#eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
 
 # Hibernate
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=validate
-entitymanager.packagesToScan=com.sakha.userservice.entity
+#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#hibernate.show_sql=true
+#hibernate.hbm2ddl.auto=validate
+#entitymanager.packagesToScan=com.sakha.userservice.entity
 
 # Spring Data - MySQL 
 spring.datasource.driver=com.mysql.jdbc.Driver
