--- a/auth-service/auth-dev.properties
+++ b/auth-service/auth-dev.properties
@@ -1,5 +1,5 @@
-#spring.application.name=auth-service
-#server.port=8085
+spring.application.name=auth-service
+server.port=8085
 
 #eureka.client.region = default
 #eureka.client.registryFetchIntervalSeconds = 5
@@ -15,9 +15,17 @@ entitymanager.packagesToScan=com.sakha.authservice.entity
 spring.datasource.driver=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/recruiter
+spring.datasource.url=jdbc:mysql://localhost:3306/oAuthDB?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+
+# JPA
+jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+jpa.hibernate.properties.hibernate.show_sql=true
+jpa.hibernate.properties.hibernate.format_sql=true        
+        
+logging.level.org.hibernate.type=trace
 
 #Client ID and Client Secret
 web.clientID=clientIdPassword
