auth props updated

--- a/auth-service/auth-dev.properties
+++ b/auth-service/auth-dev.properties
@@ -6,10 +6,10 @@ server.port=8085
 #eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
 
 # Hibernate
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=validate
-entitymanager.packagesToScan=com.sakha.authservice.entity
+#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#hibernate.show_sql=true
+#hibernate.hbm2ddl.auto=validate
+#entitymanager.packagesToScan=com.sakha.authservice.entity
 
 # Spring Data - MySQL 
 spring.datasource.driver=com.mysql.jdbc.Driver
