--- a/auth-service/auth-dev.properties
+++ b/auth-service/auth-dev.properties
@@ -12,6 +12,8 @@ server.port=8085
 #entitymanager.packagesToScan=com.sakha.authservice.entity
 
 # Spring Data - MySQL 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.initialization-mode=always
 spring.datasource.driver=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
