--- a/auth-service/auth-dev.properties
+++ b/auth-service/auth-dev.properties
@@ -30,6 +30,6 @@ jpa.hibernate.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
 
 #Client ID and Client Secret
-web.clientID=clientIdPassword
-web.clientSecret=secret
+#web.clientID=clientIdPassword
+#web.clientSecret=secret
 
