--- a/auth-service/auth.properties
+++ b/auth-service/auth.properties
@@ -20,6 +20,6 @@
 #spring.datasource.password=root
 
 #Client ID and Client Secret
-web.clientID=clientIdPassword
-web.clientSecret=secret
+#web.clientID=clientIdPassword
+#web.clientSecret=secret
 
