--- a/auth-service/auth-dev.properties
+++ b/auth-service/auth-dev.properties
@@ -1,4 +1,4 @@
-spring.application.name=auth
+#spring.application.name=auth
 server.port=8085
 
 #eureka.client.region = default
@@ -14,7 +14,7 @@ server.port=8085
 # Spring Data - MySQL 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.initialization-mode=always
-spring.datasource.driver=com.mysql.jdbc.Driver
+#spring.datasource.driver=com.mysql.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/oAuthDB?createDatabaseIfNotExist=true
