--- a/user-service/user.properties
+++ b/user-service/user.properties
@@ -19,3 +19,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/recruiter
 spring.datasource.username=root
 spring.datasource.password=root
 
+jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
