--- a/user-service/user.properties
+++ b/user-service/user.properties
@@ -1,9 +1,11 @@
 #spring.application.name=user-service
 #server.port=8083
 
-#eureka.client.region = default
-#eureka.client.registryFetchIntervalSeconds = 5
-#eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+eureka.client.region = default
+eureka.client.registryFetchIntervalSeconds = 5
+eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 # Hibernate
 #hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
