--- a/user-service/user.properties
+++ b/user-service/user.properties
@@ -6,6 +6,8 @@ eureka.client.registryFetchIntervalSeconds = 5
 eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+eureka.instance.instance-id=${spring.application.name}-${random.int}
+eureka.instance.hostname=localhost
 
 # Hibernate
 #hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
