--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -3,18 +3,23 @@ server.port=8080
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
+eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.instance-id=${spring.application.name}-${random.int}
+eureka.instance.hostname=localhost
 
-zuul.routes.user-service.path=/user-service/**
-zuul.routes.user-service.sensitive-headers=Set-Cookie,Authorization
-hystrix.command.user-service.execution.isolation.thread.timeoutInMilliseconds=600000
+zuul.routes.user.path=/user/**
+zuul.routes.user.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.user.execution.isolation.thread.timeoutInMilliseconds=600000
 
-zuul.routes.search-service.path=/search-service/**
-zuul.routes.search-service.sensitive-headers=Set-Cookie,Authorization
-hystrix.command.rating-service.execution.isolation.thread.timeoutInMilliseconds=600000
+zuul.routes.search.path=/search/**
+zuul.routes.search.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.search.execution.isolation.thread.timeoutInMilliseconds=600000
 
-zuul.routes.auth-service.path=/auth-service/**
-zuul.routes.auth-service.sensitive-headers=Set-Cookie,Authorization
-hystrix.command.rating-service.execution.isolation.thread.timeoutInMilliseconds=600000
+zuul.routes.profile.path=/profile/**
+zuul.routes.profile.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.profile.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.discovery.path=/discovery/**
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
