--- a/profile-service/profile-dev.properties
+++ b/profile-service/profile-dev.properties
@@ -1,5 +1,5 @@
-#spring.application.name=search-service
-#server.port=8084
+#spring.application.name=user-service
+#server.port=8083
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
@@ -13,7 +13,7 @@ eureka.instance.hostname=localhost
 #hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #hibernate.show_sql=true
 #hibernate.hbm2ddl.auto=validate
-#entitymanager.packagesToScan=com.sakha.searchservice.entity
+#entitymanager.packagesToScan=com.sakha.userservice.entity
 
 # Spring Data - MySQL 
 #spring.datasource.driver=com.mysql.jdbc.Driver
