--- a/profile-service/profile.properties
+++ b/profile-service/profile.properties
@@ -1,13 +1,11 @@
-#spring.application.name=search-service
-#server.port=8084
-
-
+#spring.application.name=profile-service
+#server.port=8083
 
 # Hibernate
 #hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #hibernate.show_sql=true
 #hibernate.hbm2ddl.auto=validate
-#entitymanager.packagesToScan=com.sakha.searchservice.entity
+#entitymanager.packagesToScan=com.sakha.userservice.entity
 
 # Spring Data - MySQL 
 spring.datasource.driver=com.mysql.jdbc.Driver
@@ -22,4 +20,3 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 security.oauth2.resource.token-info-uri=http://localhost:9191/oauth/check_token
 security.oauth2.client.client-id=clientId
 security.oauth2.client.client-secret=secretclient
-
