--- a/profile-service/profile.properties
+++ b/profile-service/profile.properties
@@ -1,6 +1,14 @@
 #spring.application.name=profile-service
 #server.port=8083
 
+eureka.client.region = default
+eureka.client.registryFetchIntervalSeconds = 5
+eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.instance-id=${spring.application.name}-${random.int}
+eureka.instance.hostname=localhost
+
 # Hibernate
 #hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #hibernate.show_sql=true
