--- a/profile-service/profile.properties
+++ b/profile-service/profile.properties
@@ -25,6 +25,6 @@ spring.datasource.password=root
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-security.oauth2.resource.token-info-uri=http://localhost:9191/oauth/check_token
-security.oauth2.client.client-id=clientId
-security.oauth2.client.client-secret=secretclient
+#security.oauth2.resource.token-info-uri=http://localhost:9191/oauth/check_token
+#security.oauth2.client.client-id=clientId
+#security.oauth2.client.client-secret=secretclient
