--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -9,19 +9,28 @@ eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
 eureka.instance.hostname=localhost
 
+zuul.routes.authorization.path=/auth/**
+zuul.routes.authorization.serviceId=authorization-server
+zuul.routes.authorization.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.authorization.execution.isolation.thread.timeoutInMilliseconds=600000
+
 zuul.routes.user.path=/user/**
+zuul.routes.authorization.serviceId=user-service
 zuul.routes.user.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.user.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.search.path=/search/**
+zuul.routes.authorization.serviceId=search-service
 zuul.routes.search.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.search.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.profile.path=/profile/**
+zuul.routes.authorization.serviceId=profile-service
 zuul.routes.profile.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.profile.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.discovery.path=/discovery/**
+zuul.routes.authorization.serviceId=discovery
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 zuul.routes.discovery.url=http://localhost:8082
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
