props for gateway

--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -10,6 +10,7 @@ eureka.instance.instance-id=${spring.application.name}-${random.int}
 eureka.instance.hostname=localhost
 
 zuul.routes.authorization.path=/auth/**
+zuul.routes.authorization.url=http://localhost:9191
 zuul.routes.authorization.serviceId=authorization-server
 zuul.routes.authorization.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.authorization.execution.isolation.thread.timeoutInMilliseconds=600000
