--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -24,9 +24,10 @@ security.oauth2.client.client-id=clientId
 security.oauth2.client.client-secret=secretclient
 
 #routing
+zuul.sensitiveHeaders=Authorization
 
 zuul.routes.authorization.path=/auth/**
-zuul.routes.authorization.url=http://localhost:9191
+#zuul.routes.authorization.url=http://localhost:9191
 zuul.routes.authorization.serviceId=authorization-server
 zuul.routes.authorization.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.authorization.execution.isolation.thread.timeoutInMilliseconds=600000
