--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -16,7 +16,7 @@ security.oauth2.client.client-secret=secretclient
 #routing
 zuul.sensitiveHeaders=Authorization
 
-zuul.routes.authorization.path=/authorization/**
+zuul.routes.authorization.path=/oauth/**
 #zuul.routes.authorization.url=http://localhost:9191
 zuul.routes.authorization.serviceId=authorization-server
 zuul.routes.authorization.sensitive-headers=Set-Cookie,Authorization
