--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -17,7 +17,7 @@ security.oauth2.client.client-secret=secretclient
 zuul.sensitiveHeaders=Authorization
 
 zuul.routes.authorization.path=/oauth/**
-#zuul.routes.authorization.url=http://localhost:9191
+zuul.routes.authorization.url=http://localhost:9191/
 zuul.routes.authorization.serviceId=authorization-server
 zuul.routes.authorization.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.authorization.execution.isolation.thread.timeoutInMilliseconds=600000
