code update for dearch props

--- a/search-service/search.properties
+++ b/search-service/search.properties
@@ -1,13 +1,19 @@
 #spring.application.name=search-service
 #server.port=8084
 
-
+eureka.client.region = default
+eureka.client.registryFetchIntervalSeconds = 5
+eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.instance-id=${spring.application.name}-${random.int}
+eureka.instance.hostname=localhost
 
 # Hibernate
 #hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #hibernate.show_sql=true
 #hibernate.hbm2ddl.auto=validate
-#entitymanager.packagesToScan=com.sakha.searchservice.entity
+#entitymanager.packagesToScan=com.sakha.userservice.entity
 
 # Spring Data - MySQL 
 spring.datasource.driver=com.mysql.jdbc.Driver
@@ -19,7 +25,13 @@ spring.datasource.password=root
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-#security.oauth2.resource.token-info-uri=http://localhost:9191/oauth/check_token
-#security.oauth2.client.client-id=clientId
-#security.oauth2.client.client-secret=secretclient
+security.oauth2.resource.token-info-uri=http://localhost:9191/oauth/check_token
+security.oauth2.client.client-id=clientId
+security.oauth2.client.client-secret=secretclient
+
+#Swagger
+app.client.id=clientId
+app.client.secret=secretclient
+app.user.id=ranjani.cm@sakhatech.com
+host.full.dns.auth.link=http://localhost:8080/RecruiterAuth/oauth
 
