--- a/search-service/search.properties
+++ b/search-service/search.properties
@@ -33,5 +33,5 @@ security.oauth2.client.client-secret=secretclient
 app.client.id=clientId
 app.client.secret=secretclient
 app.user.id=ranjani.cm@sakhatech.com
-host.full.dns.auth.link=http://localhost:8080/RecruiterAuth/oauth
+host.full.dns.auth.link=http://localhost:9191/oauth
 
