gateway props updated

--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -9,6 +9,14 @@ eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
 eureka.instance.hostname=localhost
 
+# Spring Data - MySQL 
+spring.datasource.driver=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/recruiter
+spring.datasource.username=root
+spring.datasource.password=root
+
 security.oauth2.resource.token-info-uri=http://localhost:9191/oauth/check_token
 security.oauth2.client.client-id=clientId
 security.oauth2.client.client-secret=secretclient
