--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -17,9 +17,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/recruiter
 spring.datasource.username=root
 spring.datasource.password=root
 
-security.oauth2.resource.token-info-uri=http://localhost:9191/oauth/check_token
-security.oauth2.client.client-id=clientId
-security.oauth2.client.client-secret=secretclient
+#security.oauth2.resource.token-info-uri=http://localhost:9191/oauth/check_token
+#security.oauth2.client.client-id=clientId
+#security.oauth2.client.client-secret=secretclient
 
 #routing
 zuul.sensitiveHeaders=Authorization
