code update props

--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -22,7 +22,7 @@ spring.datasource.password=root
 #security.oauth2.client.client-secret=secretclient
 
 #routing
-zuul.sensitiveHeaders=Authorization
+zuul.sensitiveHeaders=Cookie,Set-Cookie
 
 zuul.routes.authorization.path=/oauth/**
 zuul.routes.authorization.url=http://localhost:9191/
@@ -32,21 +32,21 @@ hystrix.command.authorization.execution.isolation.thread.timeoutInMilliseconds=6
 
 zuul.routes.user.path=/user/**
 zuul.routes.authorization.serviceId=user-service
-zuul.routes.user.sensitive-headers=Set-Cookie,Authorization
+zuul.routes.user.sensitive-headers=Set-Cookie,Cookie
 hystrix.command.user.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.search.path=/search/**
 zuul.routes.authorization.serviceId=search-service
-zuul.routes.search.sensitive-headers=Set-Cookie,Authorization
+zuul.routes.search.sensitive-headers=Set-Cookie,Cookie
 hystrix.command.search.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.profile.path=/profile/**
 zuul.routes.authorization.serviceId=profile-service
-zuul.routes.profile.sensitive-headers=Set-Cookie,Authorization
+zuul.routes.profile.sensitive-headers=Set-Cookie,Cookie
 hystrix.command.profile.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.discovery.path=/discovery/**
 zuul.routes.authorization.serviceId=discovery
-zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
+zuul.routes.discovery.sensitive-headers=Set-Cookie,Cookie
 zuul.routes.discovery.url=http://localhost:8082
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
