code to update gateway props

--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -21,6 +21,8 @@ spring.datasource.password=root
 #routing
 zuul.sensitiveHeaders=Cookie,Set-Cookie
 
+zuul.host.socket-timeout-millis=60000
+
 zuul.routes.authorization.path=/oauth/**
 zuul.routes.authorization.url=http://localhost:9191/
 zuul.routes.authorization.serviceId=authorization-server
