--- a/search-service/search.properties
+++ b/search-service/search.properties
@@ -14,7 +14,7 @@ eureka.instance.hostname=localhost
 spring.datasource.driver=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/recruiter
+spring.datasource.url=jdbc:mysql://localhost:3306/sailfish
 spring.datasource.username=root
 spring.datasource.password=root
 
