--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -20,6 +20,8 @@ spring.datasource.password=root
 
 #routing
 zuul.sensitiveHeaders=Cookie,Set-Cookie
+hystrix.command.default.execution.isolation.strategy=THREAD
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.host.socket-timeout-millis=60000
 
@@ -27,30 +29,36 @@ zuul.routes.authorization.path=/oauth/**
 zuul.routes.authorization.url=http://localhost:9191/
 zuul.routes.authorization.serviceId=authorization-server
 zuul.routes.authorization.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.authorization.execution.isolation.strategy=THREAD
 hystrix.command.authorization.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.user.path=/user/**
 zuul.routes.authorization.serviceId=user-service
 zuul.routes.user.sensitive-headers=Set-Cookie,Cookie
+hystrix.command.user.execution.isolation.strategy=THREAD
 hystrix.command.user.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.search.path=/search/**
 zuul.routes.authorization.serviceId=search-service
 zuul.routes.search.sensitive-headers=Set-Cookie,Cookie
+hystrix.command.search.execution.isolation.strategy=THREAD
 hystrix.command.search.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.profile.path=/profile/**
 zuul.routes.authorization.serviceId=profile-service
 zuul.routes.profile.sensitive-headers=Set-Cookie,Cookie
+hystrix.command.profile.execution.isolation.strategy=THREAD
 hystrix.command.profile.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.jobposting.path=/jobposting/**
 zuul.routes.authorization.serviceId=jobposting-service
 zuul.routes.jobposting.sensitive-headers=Set-Cookie,Cookie
+hystrix.command.jobposting.execution.isolation.strategy=THREAD
 hystrix.command.jobposting.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.discovery.path=/discovery/**
 zuul.routes.authorization.serviceId=discovery
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Cookie
 zuul.routes.discovery.url=http://localhost:8082
+hystrix.command.discovery.execution.isolation.strategy=THREAD
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
