--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -20,6 +20,7 @@ spring.datasource.password=root
 
 #routing
 zuul.sensitiveHeaders=Cookie,Set-Cookie
+hystrix.command.default.execution.timeout.enabled = false
 hystrix.command.default.execution.isolation.strategy=THREAD
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=600000
 
