props updates for gateway

--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -20,11 +20,13 @@ spring.datasource.password=root
 
 #routing
 zuul.sensitiveHeaders=Cookie,Set-Cookie
-hystrix.command.default.execution.timeout.enabled = false
+ribbon.ConnectTimeout=60000
+ribbon.ReadTimeout=60000
+zuul.host.connect-timeout-millis
+zuul.host.socket-timeout-millis=60000
+hystrix.command.default.execution.timeout.enabled=false
 hystrix.command.default.execution.isolation.strategy=THREAD
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=600000
-
-zuul.host.socket-timeout-millis=60000
 
 zuul.routes.authorization.path=/oauth/**
 zuul.routes.authorization.url=http://localhost:9191/
