--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -22,7 +22,7 @@ spring.datasource.password=root
 zuul.sensitiveHeaders=Cookie,Set-Cookie
 ribbon.ConnectTimeout=60000
 ribbon.ReadTimeout=60000
-zuul.host.connect-timeout-millis
+zuul.host.connect-timeout-millis=60000
 zuul.host.socket-timeout-millis=60000
 hystrix.command.default.execution.timeout.enabled=false
 hystrix.command.default.execution.isolation.strategy=THREAD
