--- a/auth-service/auth-dev.properties
+++ b/auth-service/auth-dev.properties
@@ -1,5 +1,5 @@
 #spring.application.name=auth
-server.port=8085
+#server.port=8085
 
 #eureka.client.region = default
 #eureka.client.registryFetchIntervalSeconds = 5
