--- a/search-service/search-dev.properties
+++ b/search-service/search-dev.properties
@@ -9,20 +9,17 @@ eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
 eureka.instance.hostname=localhost
 
+# Hibernate
+#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#hibernate.show_sql=true
+#hibernate.hbm2ddl.auto=validate
+#entitymanager.packagesToScan=com.sakha.searchservice.entity
+
 # Spring Data - MySQL 
-spring.datasource.driver=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/sailfish
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.driver=com.mysql.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/recruiter
+#spring.datasource.username=root
+#spring.datasource.password=root
 
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-
-
-#Swagger
-app.client.id=clientId
-app.client.secret=secretclient
-app.user.id=ranjani.cm@sakhatech.com
-host.full.dns.auth.link=http://localhost:9191/oauth
