--- a/user-service/user-dev.properties
+++ b/user-service/user-dev.properties
@@ -7,13 +7,17 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-# Spring Data - MySQL 
-spring.datasource.driver=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/sailfish
-spring.datasource.username=root
-spring.datasource.password=root
+# Hibernate
+#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#hibernate.show_sql=true
+#hibernate.hbm2ddl.auto=validate
+#entitymanager.packagesToScan=com.sakha.userservice.entity
 
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# Spring Data - MySQL 
+#spring.datasource.driver=com.mysql.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/recruiter
+#spring.datasource.username=root
+#spring.datasource.password=root
 
