--- a/auth-service/auth.properties
+++ b/auth-service/auth.properties
@@ -1,25 +1,20 @@
-#spring.application.name=auth-service
-#server.port=8085
+server.port=9191
+spring.application.name=authorization
 
-#eureka.client.region = default
-#eureka.client.registryFetchIntervalSeconds = 5
-#eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
-
-# Hibernate
-#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#hibernate.show_sql=true
-#hibernate.hbm2ddl.auto=validate
-#entitymanager.packagesToScan=com.sakha.authservice.entity
 
 # Spring Data - MySQL 
-#spring.datasource.driver=com.mysql.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-#spring.datasource.url=jdbc:mysql://localhost:3306/recruiter
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.driver=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://10.216.204.152:3306/sailfish
+spring.datasource.username=marlin
+spring.datasource.password=Marlin@321#
 
 #Client ID and Client Secret
-#web.clientID=clientIdPassword
-#web.clientSecret=secret
+web.clientID=clientIdPassword
+web.clientSecret=secret
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+
+logging.level.org.hibernate.type=trace
