--- a/auth-service/auth.properties
+++ b/auth-service/auth.properties
@@ -1,5 +1,10 @@
-server.port=9191
-spring.application.name=authorization
+eureka.client.region = default
+eureka.client.registryFetchIntervalSeconds = 5
+eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.instance-id=${spring.application.name}-${random.int}
+eureka.instance.hostname=localhost
 
 
 # Spring Data - MySQL 
