--- a/auth-service/auth.properties
+++ b/auth-service/auth.properties
@@ -10,9 +10,9 @@ eureka.instance.hostname=localhost
 # Spring Data - MySQL 
 spring.datasource.driver=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://10.216.204.152:3306/sailfish
-spring.datasource.username=marlin
-spring.datasource.password=Marlin@321#
+spring.datasource.url=jdbc:mysql://localhost:3306/sailfish
+spring.datasource.username=root
+spring.datasource.password=root
 
 #Client ID and Client Secret
 web.clientID=clientIdPassword
