--- a/auth-service/auth.properties
+++ b/auth-service/auth.properties
@@ -1,3 +1,6 @@
+spring.application.name=gateway
+server.port=9090
+
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
 eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
