--- a/auth-service/auth-dev.properties
+++ b/auth-service/auth-dev.properties
@@ -1,15 +1,13 @@
 #spring.application.name=auth
-server.port=8085
+#server.port=8085
 
-#eureka.client.region = default
-#eureka.client.registryFetchIntervalSeconds = 5
-#eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
-
-# Hibernate
-#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#hibernate.show_sql=true
-#hibernate.hbm2ddl.auto=validate
-#entitymanager.packagesToScan=com.sakha.authservice.entity
+eureka.client.region = default
+eureka.client.registryFetchIntervalSeconds = 5
+eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.instance-id=${spring.application.name}-${random.int}
+eureka.instance.hostname=localhost
 
 # Spring Data - MySQL 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
