--- a/auth-service/auth.properties
+++ b/auth-service/auth.properties
@@ -13,6 +13,7 @@ eureka.instance.hostname=localhost
 # Spring Data - MySQL 
 spring.datasource.driver=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/sailfish
 spring.datasource.username=root
 spring.datasource.password=root
