--- a/auth-service/auth.properties
+++ b/auth-service/auth.properties
@@ -18,6 +18,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sailfish
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 #Client ID and Client Secret
 web.clientID=clientIdPassword
 web.clientSecret=secret
@@ -25,5 +27,8 @@ web.clientSecret=secret
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
-
-logging.level.org.hibernate.type=trace
+#Swagger
+app.client.id=clientId
+app.client.secret=secretclient
+app.user.id=ranjani.cm@sakhatech.com
+host.full.dns.auth.link=http://localhost:9191/oauth
