--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -5,7 +5,7 @@ eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
 eureka.client.serviceUrl.defaultZone=https://rec-dev.monsterindia.com/discovery
 eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=false
+eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
 eureka.instance.hostname=localhost
 
