--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -7,7 +7,7 @@ eureka.client.serviceUrl.defaultZone=https://rec-dev.monsterindia.com/discovery
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
-eureka.instance.hostname=localhost
+eureka.instance.hostname=rec-dev.monsterindia.com
 
 # Spring Data - MySQL 
 spring.datasource.driver=com.mysql.jdbc.Driver
