--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -3,7 +3,7 @@ server.port=9090
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=http://rec-dev.monsterindia.com/discovery
+eureka.client.serviceUrl.defaultZone=http://rec-dev.monsterindia.com/discovery/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
