--- a/search-service/search.properties
+++ b/search-service/search.properties
@@ -3,11 +3,11 @@
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+eureka.client.serviceUrl.defaultZone=https://rec-dev.monsterindia.com/discovery/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
-eureka.instance.hostname=localhost
+eureka.instance.hostname=rec-dev.monsterindia.com
 
 
 # Spring Data - MySQL 
