--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -29,7 +29,7 @@ hystrix.command.default.execution.isolation.strategy=THREAD
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.authorization.path=/oauth/**
-zuul.routes.authorization.url=http://localhost:9191/
+zuul.routes.authorization.url=https://rec-dev.monsterindia.com/authorization-server/
 zuul.routes.authorization.serviceId=authorization-server
 zuul.routes.authorization.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.authorization.execution.isolation.strategy=THREAD
@@ -62,6 +62,6 @@ hystrix.command.jobposting.execution.isolation.thread.timeoutInMilliseconds=6000
 zuul.routes.discovery.path=/discovery/**
 zuul.routes.authorization.serviceId=discovery
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Cookie
-zuul.routes.discovery.url=http://localhost:8082
+zuul.routes.discovery.url=https://rec-dev.monsterindia.com/discovery
 hystrix.command.discovery.execution.isolation.strategy=THREAD
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
