--- a/search-service/search.properties
+++ b/search-service/search.properties
@@ -26,5 +26,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 app.client.id=clientId
 app.client.secret=secretclient
 app.user.id=ranjani.cm@sakhatech.com
-host.full.dns.auth.link=http://localhost:9191/oauth
+host.full.dns.auth.link=https://rec-dev.monsterindia.com/oauth
 
