--- a/search-service/search.properties
+++ b/search-service/search.properties
@@ -18,7 +18,7 @@ spring.datasource.url=jdbc:mysql://10.216.204.152:3306/sailfish
 spring.datasource.username=marlin
 spring.datasource.password=Marlin@321#
 
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
 
