--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -41,7 +41,7 @@ zuul.routes.user.sensitive-headers=Set-Cookie,Cookie
 hystrix.command.user.execution.isolation.strategy=THREAD
 hystrix.command.user.execution.isolation.thread.timeoutInMilliseconds=600000
 
-zuul.routes.search.path=**/search/**
+zuul.routes.search.path=/gateway/search/**
 zuul.routes.authorization.serviceId=search-service
 zuul.routes.search.sensitive-headers=Set-Cookie,Cookie
 hystrix.command.search.execution.isolation.strategy=THREAD
