--- a/gateway-service/gateway.properties
+++ b/gateway-service/gateway.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=https://rec-dev.monsterindia.com/discovery/eureka/
+eureka.client.serviceUrl.defaultZone=https://rec-dev-discovery.monsterindia.com/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
@@ -29,7 +29,7 @@ hystrix.command.default.execution.isolation.strategy=THREAD
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.authorization.path=/oauth/**
-zuul.routes.authorization.url=https://rec-dev.monsterindia.com/authorization-server/
+zuul.routes.authorization.url=https://rec-dev-auth.monsterindia.com
 zuul.routes.authorization.serviceId=authorization-server
 zuul.routes.authorization.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.authorization.execution.isolation.strategy=THREAD
@@ -41,7 +41,7 @@ zuul.routes.user.sensitive-headers=Set-Cookie,Cookie
 hystrix.command.user.execution.isolation.strategy=THREAD
 hystrix.command.user.execution.isolation.thread.timeoutInMilliseconds=600000
 
-zuul.routes.search.path=/gateway/search/**
+zuul.routes.search.path=/search/**
 zuul.routes.authorization.serviceId=search-service
 zuul.routes.search.sensitive-headers=Set-Cookie,Cookie
 hystrix.command.search.execution.isolation.strategy=THREAD
@@ -62,6 +62,6 @@ hystrix.command.jobposting.execution.isolation.thread.timeoutInMilliseconds=6000
 zuul.routes.discovery.path=/discovery/**
 zuul.routes.authorization.serviceId=discovery
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Cookie
-zuul.routes.discovery.url=https://rec-dev.monsterindia.com/discovery
+zuul.routes.discovery.url=https://rec-dev-discovery.monsterindia.com
 hystrix.command.discovery.execution.isolation.strategy=THREAD
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
