--- a/discovery-service/discovery.properties
+++ b/discovery-service/discovery.properties
@@ -3,6 +3,6 @@ server.port=8080
 
 eureka.instance.hostname=localhost
 
-eureka.client.serviceUrl.defaultZone=https://rec-dev-discovery.monsterindia.com/discovery/
+eureka.client.serviceUrl.defaultZone=https://rec-dev-discovery.monsterindia.com/
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
