--- a/search-service/search.properties
+++ b/search-service/search.properties
@@ -3,7 +3,7 @@
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=https://rec-dev.monsterindia.com/discovery/eureka/
+eureka.client.serviceUrl.defaultZone=https://rec-dev-discovery.monsterindia.com/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
@@ -26,5 +26,5 @@ spring.datasource.password=Marlin@321#
 app.client.id=clientId
 app.client.secret=secretclient
 app.user.id=ranjani.cm@sakhatech.com
-host.full.dns.auth.link=https://rec-dev.monsterindia.com/oauth
+host.full.dns.auth.link=https://rec-dev-auth.monsterindia.com
 
