--- a/user-service/user.properties
+++ b/user-service/user.properties
@@ -8,7 +8,7 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
 eureka.instance.hostname=localhost
-
+eureka.instance.preferIpAddress=true
 
 # Spring Data - MySQL 
 spring.datasource.driver=com.mysql.jdbc.Driver
