--- a/search-service/search.properties
+++ b/search-service/search.properties
@@ -8,7 +8,7 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
 eureka.instance.hostname=rec-dev.monsterindia.com
-
+eureka.instance.preferIpAddress=true
 
 # Spring Data - MySQL 
 spring.datasource.driver=com.mysql.jdbc.Driver
