--- a/search-service/search.properties
+++ b/search-service/search.properties
@@ -19,7 +19,16 @@ spring.datasource.username=marlin
 spring.datasource.password=Marlin@321#
 
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+logging.level.org.apache.tomcat=DEBUG
+logging.level.org.apache.catalina=DEBUG
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.suffix=.log
+server.tomcat.accesslog.prefix=access_log
+server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
+server.tomcat.basedir=/home/temp/
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.pattern=common
+server.http2.enabled=true
 
 
 #Swagger
