--- a/discovery-service/discovery.properties
+++ b/discovery-service/discovery.properties
@@ -6,3 +6,4 @@ eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=https://rec-dev-discovery.monsterindia.com/
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.server.enableSelfPreservation=false
