--- a/masterdata-service/masterdata.properties
+++ b/masterdata-service/masterdata.properties
@@ -19,7 +19,9 @@ spring.datasource.username=marlin
 spring.datasource.password=Marlin@321#
 
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+spring.redis.host=10.216.240.129
+spring.redis.password=monster#007
+spring.redis.port=32033
 
 
 #Swagger
