--- a/masterdata-service/masterdata.properties
+++ b/masterdata-service/masterdata.properties
@@ -23,6 +23,16 @@ spring.redis.host=10.216.240.129
 spring.redis.password=monster#007
 spring.redis.port=32033
 
+logging.level.org.apache.tomcat=DEBUG
+logging.level.org.apache.catalina=DEBUG
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.suffix=.log
+server.tomcat.accesslog.prefix=access_log
+server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
+server.tomcat.basedir=/home/temp/
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.pattern=common
+server.http2.enabled=true
 
 #Swagger
 app.client.id=clientId
