JP properties added

--- a/jobposting-service/jobposting.properties
+++ b/jobposting-service/jobposting.properties
@@ -3,21 +3,37 @@
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+eureka.client.serviceUrl.defaultZone=https://rec-dev-discovery.monsterindia.com/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
-eureka.instance.hostname=localhost
+eureka.instance.hostname=rec-dev.monsterindia.com
+eureka.instance.preferIpAddress=true
 
 # Spring Data - MySQL 
 spring.datasource.driver=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/sailfish
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://10.216.240.167:3306/sailfish
+spring.datasource.username=marlin
+spring.datasource.password=Marlin@321#
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-
+draft_limit_ratio = 1.5
+job_title_char_limit = 100
+job_summary_char_limit = 200
+job_description_char_min_limit = 200
+job_selling_point_char_limit = 50
+job_location_limit_india = 2
+job_location_limit_gulf = 2
+job_location_limit_sea = 3
+job_category_limit_india = 2
+job_role_limit_india = 4
+job_category_limit_gulf = 2
+job_role_limit_gulf = 4
+job_category_limit_sea = 3
+job_role_limit_sea = 4
+job_industry_limit = 7
+job_locality_limit = 3
 
