--- a/masterdata-service/masterdata.properties
+++ b/masterdata-service/masterdata.properties
@@ -29,7 +29,7 @@ server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.suffix=.log
 server.tomcat.accesslog.prefix=access_log
 server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
-#server.tomcat.basedir=/home/temp/
+server.tomcat.basedir=/home/temp/
 server.tomcat.accesslog.directory=logs
 server.tomcat.accesslog.pattern=common
 server.http2.enabled=true
