--- a/profile-service/profile.properties
+++ b/profile-service/profile.properties
@@ -12,8 +12,8 @@ spring.datasource.driver=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/sailfish
-spring.datasource.username=marlin
-spring.datasource.password=Marlin@321#
+spring.datasource.username=root
+spring.datasource.password=root
 
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.redis.host=10.216.240.129
