--- a/jobposting-service/jobposting.properties
+++ b/jobposting-service/jobposting.properties
@@ -24,6 +24,7 @@ draft_limit_ratio = 1.5
 job_title_char_limit = 100
 job_summary_char_limit = 200
 job_description_char_min_limit = 200
+job_description_char_max_limit = 800
 job_selling_point_char_limit = 50
 job_location_limit_india = 2
 job_location_limit_gulf = 2
@@ -36,4 +37,6 @@ job_category_limit_sea = 3
 job_role_limit_sea = 4
 job_industry_limit = 7
 job_locality_limit = 3
+walkin_date_range = 14
+walkin_venue_limit = 10
 
