--- a/profile-service/profile.properties
+++ b/profile-service/profile.properties
@@ -11,9 +11,9 @@ eureka.instance.preferIpAddress=true
 spring.datasource.driver=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/sailfish
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://10.216.240.167:3306/sailfish
+spring.datasource.username=marlin
+spring.datasource.password=Marlin@321#
 
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.redis.host=10.216.240.129
