--- a/discovery-service/discovery.properties
+++ b/discovery-service/discovery.properties
@@ -1,9 +1,1 @@
-spring.application.name=discovery
-server.port=8080
-
-eureka.instance.hostname=localhost
-
-eureka.client.serviceUrl.defaultZone=https://rec-dev-discovery.monsterindia.com/
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.server.enableSelfPreservation=false
+spring.profiles.active=dev
