--- a/auth-service/auth-dev.properties
+++ b/auth-service/auth-dev.properties
@@ -1,5 +1,5 @@
-#spring.application.name=auth
-#server.port=8085
+#spring.application.name=gateway
+#server.port=9090
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
@@ -9,25 +9,26 @@ eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
 eureka.instance.hostname=localhost
 
+
 # Spring Data - MySQL 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.initialization-mode=always
-#spring.datasource.driver=com.mysql.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/oAuthDB?createDatabaseIfNotExist=true
+spring.datasource.driver=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/sailfish
 spring.datasource.username=root
 spring.datasource.password=root
 
-
-# JPA
-jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-jpa.hibernate.properties.hibernate.show_sql=true
-jpa.hibernate.properties.hibernate.format_sql=true        
-        
-logging.level.org.hibernate.type=trace
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #Client ID and Client Secret
-#web.clientID=clientIdPassword
-#web.clientSecret=secret
+web.clientID=clientIdPassword
+web.clientSecret=secret
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+#Swagger
+app.client.id=clientId
+app.client.secret=secretclient
+app.user.id=ranjani.cm@sakhatech.com
+host.full.dns.auth.link=http://localhost:9191/oauth
