--- a/masterdata-service/masterdata.properties
+++ b/masterdata-service/masterdata.properties
@@ -1,42 +1,1 @@
-#spring.application.name=masterdata-service
-#server.port=8084
-
-eureka.client.region = default
-eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=https://rec-dev-discovery.monsterindia.com/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.instance.instance-id=${spring.application.name}-${random.int}
-eureka.instance.hostname=rec-dev.monsterindia.com
-eureka.instance.preferIpAddress=true
-
-# Spring Data - MySQL 
-spring.datasource.driver=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://10.216.240.167:3306/sailfish
-spring.datasource.username=marlin
-spring.datasource.password=Marlin@321#
-
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.redis.host=10.216.240.129
-spring.redis.password=monster#007
-spring.redis.port=32033
-
-logging.level.org.apache.tomcat=DEBUG
-logging.level.org.apache.catalina=DEBUG
-server.tomcat.accesslog.enabled=true
-server.tomcat.accesslog.suffix=.log
-server.tomcat.accesslog.prefix=access_log
-server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
-#server.tomcat.basedir=/home/temp/
-server.tomcat.accesslog.directory=logs
-server.tomcat.accesslog.pattern=common
-server.http2.enabled=true
-
-#Swagger
-app.client.id=clientId
-app.client.secret=secretclient
-app.user.id=ranjani.cm@sakhatech.com
-host.full.dns.auth.link=https://rec-dev-auth.monsterindia.com
-
+spring.profiles.active=dev
