--- a/discovery-service/discovery-qa.properties
+++ b/discovery-service/discovery-qa.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 eureka.instance.hostname=localhost
 
-eureka.client.serviceUrl.defaultZone=https://rec-dev-discovery.monsterindia.com/
+eureka.client.serviceUrl.defaultZone=https://rec-qa1-discovery.monsterindia.com/
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.server.enableSelfPreservation=false
