--- a/jobposting-service/jobposting-qa.properties
+++ b/jobposting-service/jobposting-qa.properties
@@ -3,7 +3,7 @@
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=https://rec-dev-discovery.monsterindia.com/eureka/
+eureka.client.serviceUrl.defaultZone=https://rec-qa1-discovery.monsterindia.com/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
