--- a/search-service/search-qa.properties
+++ b/search-service/search-qa.properties
@@ -3,7 +3,7 @@
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=https://rec-dev-discovery.monsterindia.com/eureka/
+eureka.client.serviceUrl.defaultZone=https://rec-qa1-discovery.monsterindia.com/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
@@ -35,5 +35,5 @@ server.http2.enabled=true
 app.client.id=clientId
 app.client.secret=secretclient
 app.user.id=ranjani.cm@sakhatech.com
-host.full.dns.auth.link=https://rec-dev-auth.monsterindia.com
+host.full.dns.auth.link=https://rec-qa1-auth.monsterindia.com
 
