--- a/gateway-service/gateway-qa.properties
+++ b/gateway-service/gateway-qa.properties
@@ -7,7 +7,7 @@ eureka.client.serviceUrl.defaultZone=https://rec-qa1-discovery.monsterindia.com/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
-eureka.instance.hostname=rec-dev.monsterindia.com
+eureka.instance.hostname=rec-qa1.monsterindia.com
 eureka.instance.preferIpAddress=true
 
 # Spring Data - MySQL 
@@ -30,7 +30,7 @@ hystrix.command.default.execution.isolation.strategy=THREAD
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.authorization.path=/oauth/**
-zuul.routes.authorization.url=https://rec-dev-auth.monsterindia.com
+zuul.routes.authorization.url=https://rec-qa1-auth.monsterindia.com
 zuul.routes.authorization.serviceId=authorization-server
 zuul.routes.authorization.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.authorization.execution.isolation.strategy=THREAD
@@ -63,6 +63,6 @@ hystrix.command.jobposting.execution.isolation.thread.timeoutInMilliseconds=6000
 zuul.routes.discovery.path=/discovery/**
 zuul.routes.authorization.serviceId=discovery
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Cookie
-zuul.routes.discovery.url=https://rec-dev-discovery.monsterindia.com
+zuul.routes.discovery.url=https://rec-qa1-discovery.monsterindia.com
 hystrix.command.discovery.execution.isolation.strategy=THREAD
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
