--- a/jobposting-service/jobposting-qa.properties
+++ b/jobposting-service/jobposting-qa.properties
@@ -7,7 +7,7 @@ eureka.client.serviceUrl.defaultZone=https://rec-qa1-discovery.monsterindia.com/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}-${random.int}
-eureka.instance.hostname=rec-dev.monsterindia.com
+eureka.instance.hostname=rec-qa1.monsterindia.com
 eureka.instance.preferIpAddress=true
 
 # Spring Data - MySQL 
