--- a/discovery-service/discovery.properties
+++ b/discovery-service/discovery.properties
@@ -1,1 +1,9 @@
-spring.profiles.active=dev
+spring.application.name=discovery
+server.port=8080
+
+eureka.instance.hostname=localhost
+
+eureka.client.serviceUrl.defaultZone=https://rec-dev-discovery.monsterindia.com/
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+eureka.server.enableSelfPreservation=false
