--- a/jobposting-service/jobposting-qa.properties
+++ b/jobposting-service/jobposting-qa.properties
@@ -39,4 +39,6 @@ job_industry_limit = 7
 job_locality_limit = 3
 walkin_date_range = 14
 walkin_venue_limit = 10
-
+max_walkin_slots_per_day = 4
+limit_for_saved_locality = 10
+limit_for_priority_setting = 7
