--- a/profile-service/profile-dev.properties
+++ b/profile-service/profile-dev.properties
@@ -36,3 +36,26 @@ app.client.id=clientId
 app.client.secret=secretclient
 app.user.id=ranjani.cm@sakhatech.com
 host.full.dns.auth.link=https://rec-dev-auth.monsterindia.com
+
+draft_limit_ratio = 1.5
+job_title_char_limit = 100
+job_summary_char_limit = 200
+job_description_char_min_limit = 200
+job_description_char_max_limit = 800
+job_selling_point_char_limit = 50
+job_location_limit_india = 2
+job_location_limit_gulf = 2
+job_location_limit_sea = 3
+job_category_limit_india = 2
+job_role_limit_india = 4
+job_category_limit_gulf = 2
+job_role_limit_gulf = 4
+job_category_limit_sea = 3
+job_role_limit_sea = 4
+job_industry_limit = 7
+job_locality_limit = 3
+walkin_date_range = 14
+walkin_venue_limit = 10
+max_walkin_slots_per_day = 4
+limit_for_saved_locality = 10
+limit_for_priority_setting = 7
