--- a/gateway-service/gateway-dev.properties
+++ b/gateway-service/gateway-dev.properties
@@ -20,7 +20,7 @@ spring.datasource.password=Marlin@321#
 
 
 #routing
-zuul.sensitiveHeaders=Cookie,Set-Cookie
+#zuul.sensitiveHeaders=Cookie,Set-Cookie
 ribbon.ConnectTimeout=60000
 ribbon.ReadTimeout=60000
 zuul.host.connect-timeout-millis=60000
